snapshots/syntax/library/functions/file/freefile/freefile_select_case.snap
---
source: src/syntax/library/functions/file/freefile.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SelectCaseStatement
      children:
        - kind: SelectKeyword
          text: Select
        - kind: Whitespace
          text: " "
        - kind: CaseKeyword
          text: Case
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: mode
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: StringLiteral
              text: "\"read\""
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: Whitespace
                  text: "        "
                - kind: AssignmentStatement
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: fileNum
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: FreeFile
                    - kind: Newline
                      text: "\n"
                - kind: OpenStatement
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: OpenKeyword
                      text: Open
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: filename
                    - kind: Whitespace
                      text: " "
                    - kind: ForKeyword
                      text: For
                    - kind: Whitespace
                      text: " "
                    - kind: InputKeyword
                      text: Input
                    - kind: Whitespace
                      text: " "
                    - kind: AsKeyword
                      text: As
                    - kind: Whitespace
                      text: " "
                    - kind: Octothorpe
                      text: "#"
                    - kind: Identifier
                      text: fileNum
                    - kind: Newline
                      text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SelectKeyword
          text: Select
